<resources>
    <string name="app_name">Project2</string>
    <string name="welcome_n_user">Welcome to Creature Buddies</string>
    <string name="select_your_n_creature">Select Your Creature</string>
    <string name="char1">Creature 1</string>
    <string name="char2">Creature 2</string>
    <string name="char3">Creature 3</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_n_admin">Welcome Admin</string>
    <string name="edit_base_stats">Edit Base Stats</string>
    <string name="select_starters">Select Starters</string>
    <string name="not_copyrighted">Not Copyrighted</string>
    <string name="edit_creature_buddy">Edit Creature Buddy</string>
    <string name="battle">Battle</string>
    <string name="pc_health">PC Health</string>
    <string name="attack">Attack</string>
    <string name="defend">Defend</string>
    <string name="todo">TODO</string>
    <string name="login_welcome">Welcome to Creature Buddies \n Sign in to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="random">Random</string>
    <string name="create_account">Create Account</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="create_account_below">Create Account Below</string>
    <string name="admin_options">Admin Options</string>
    <string name="select_your_creature_buddy">Select Your Creature Buddy</string>
    <string name="buddy_name">buddy name</string>
    <string name="profile">Profile</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="update_account">Update Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="todo_your_creature_stats_here">TODO: YOUR CREATURE STATS HERE</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="edit_screen_message">Edit Creature Buddy</string>
    <string name="health">Health:</string>
    <string name="healthHint">Health</string>
    <string name="attack_label">Attack:</string>
    <string name="attack_hint">Attack</string>
    <string name="defense_label">Defense:</string>
    <string name="defense">Defense</string>
    <string name="creature_image">Creature Image</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="submit_starters">Submit Starters</string>
    <string name="enter_buddy_id">Enter Buddy Id</string>
    <string name="view_global_rankings">View Global Rankings</string>

</resources>