<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editTextMessage"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/edit_screen_message"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/BuddyId"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMessage"
        android:hint="@string/enter_buddy_id"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/healthLabel"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/health"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/healthEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuddyId" />

    <EditText
        android:id="@+id/healthEditText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:hint="@string/healthHint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuddyId" />

    <TextView
        android:id="@+id/attackLabel"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/attack_label"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/attackEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthLabel" />

    <EditText
        android:id="@+id/attackEditText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:hint="@string/attack_hint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthEditText" />

    <TextView
        android:id="@+id/defenseLabel"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/defense_label"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/defenseEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackLabel" />

    <EditText
        android:id="@+id/defenseEditText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:layout_marginTop="28dp"
        android:hint="@string/defense"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackEditText" />

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="70dp"
        android:text="@string/submit_changes"
        android:textSize="32sp"
        android:id="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/defenseEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>