<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="382dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/welcome_n_user"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="382dp"
        android:layout_height="167dp"
        android:id="@+id/greeting2"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/select_your_n_creature"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/character1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:text="@string/char1"
        android:textSize="13sp" />

    <Button
        android:id="@+id/character2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character1"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/char2"
        android:textSize="13sp" />

    <Button
        android:id="@+id/character3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/character1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/char3"
        android:textSize="13sp" />






</androidx.constraintlayout.widget.ConstraintLayout>