<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="382dp"
        android:layout_height="167dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/edit_creature_buddy"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editBaseStat"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_base_stats"
        android:textSize="32sp" />
    <Button
        android:id="@+id/selectStarter"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editBaseStat"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/select_starters"
        android:textSize="32sp" />
    <FrameLayout
        android:id="@+id/Frame"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/selectStarter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ExpandableListView
            android:layout_width="250dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="@id/Frame"
            tools:ignore="MissingConstraints" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>